# bencher_scrape

./: .gitignore  Cargo.toml  README.md  aggregate_bench.py  bash_profile  bench.sh  crunch.py  gnuplot-script  isolate_crate_names.py  post-run.sh  profile.py  randomize.py  rust-toolchain  save_data.sh  script.plt  spawn.sh
crates/: Makefile.generic  README.md  scrapy.cfg
crates/better/bdays/: bench-sanity.data  bench-sanity.diff
crates/better/bucket_queue/: bench-sanity.data  bench-sanity.diff
crates/better/fbleau/: bench-sanity.data
crates/better/horned-owl/: bench-sanity.data
crates/better/rtriangulate/: bench-sanity.data
crates/better/rusqlite/: bench-sanity.data
crates/better/simple-irc-rs/: bench-sanity.diff
crates/better/time-parse/: bench-sanity.diff
crates/better/tonic/: bench-sanity.diff
crates/clones/KDFs/: bench-sanity.diff
crates/clones/PAKEs/: bench-sanity.data  bench-sanity.diff
crates/clones/RustQIP/: bench-sanity.data  bench-sanity.diff
crates/clones/arrayvec/: bench-sanity.data  bench-sanity.diff
crates/clones/boyer-moore-magiclen/: bench-sanity.diff
crates/clones/bravery_router/: bench-sanity.diff
crates/clones/exrs/: bench-sanity.data  bench-sanity.diff
crates/clones/flatten-overlapping-ranges-rs/: bench-sanity.diff
crates/clones/frappe/: bench-sanity.data  (+1 more)
crates/crates/bayesic_rs/: Cargo.toml  bench-sanity.diff
crates/crates/bayesic_rs/cloudlab-output/: bench-sanity-CRUNCHED.data
crates/crates/bayesic_rs/cloudlab-output-lto/: bench-sanity-CRUNCHED.data
crates/crates/bayesic_rs/output/: bench-sanity.data  mod-sanity.bench
crates/crates/simple-irc-rs/: Cargo.toml  bench-sanity.data
crates/crates/simple-irc-rs/cloudlab-output/: bench-sanity-CRUNCHED.data
crates/crates/simple-irc-rs/cloudlab-output-lto/: bench-sanity-CRUNCHED.data
crates/crates/simple-irc-rs/output/: bench-sanity.diff
crates/get-crates/: items.py  middlewares.py  pipelines.py  settings.py
crates/inconsistent/ticket/: Cargo.toml
crates/inconsistent/ticket/output/: bench-sanity.data  bench-sanity.diff  mod-sanity.bench  unmod-sanity.bench
crates/inconsistent/ticket/src/: id.rs  ticket.rs
crates/scripts/: README.md  cpf_environ.rc  devirtualize  lamp-profile  loop-profile  slamp-driver  specpriv-profile
crates/worse/bravery_router/: Cargo.toml
crates/worse/bravery_router/benches/: regex.rs
crates/worse/bravery_router/output/: bench-sanity.data  mod-sanity.bench
crates/worse/bravery_router/src/: add.rs  find.rs
(+464 files in other folders)
