[package]
name = "ticket"
version = "0.1.0"
authors = ["Hanaasagi <ambiguous404@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/Hanaasagi/ticket"
description = """
generate unique id which occupies 12 bytes.
"""

[lib]
name = "ticket"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
time = "0.1.40"
rand = "0.5.5"
md5 = "0.4"
lazy_static = "1.1.0"
machine-uid = "0.1.0"

[dev-dependencies]
bencher = "0.1"
