[package]
name = "bravery_router"
version = "0.1.4-alpha.0"
authors = ["Tommaso Allevi <tomallevi@gmail.com>"]
edition = "2018"
description = "Radix Tree implementation"
repository = "https://github.com/allevo/bravery_router"
readme = "./README.md"
keywords = ["RadixTree", "tree", "radix"]
categories = ["algorithms", "data-structures"]
license = "MIT"

[badges]
travis-ci = { repository = "allevo/bravery_router", branch = "master" }

[dependencies]
regex = "1"
log = "0.4"
lazy_static = "1"

[dev-dependencies]
bencher = "0.1.5"
route-recognizer = "0.*"

[[example]]
name = "basic"
test = true

[[bench]]
name = "static"
harness = false

[[bench]]
name = "regex"
harness = false

[[bench]]
name = "wildcard"
harness = false
